removed the top cloud

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top">
-      <img class="top-cloud" src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloud-image">
+      <!--<img class="top-cloud" src="http://seanhalpin.io/assets/img/ui/cloud.svg" alt="cloud-image">-->
       <h1> I'm Abhinav.</h1>
       <p class="first-paragraph">I am a <span class="dev">developer</span> and a <span class="dev">photographer</span>.</p>
       <img class="mountain-image" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-image">
